<?xml version="1.0" encoding="utf-8"?>
<navigation
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/loginFragment">

    <fragment
        android:id="@+id/loginFragment"
        android:name="com.qubacy.geoqq.ui.application.activity._common.screen.login.LoginFragment"
        android:label="Login"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/action_loginFragment_to_mateChatsFragment"
            app:destination="@id/mateChatsFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:launchSingleTop="true"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"
            app:popUpTo="@id/nav_graph"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/mateChatsFragment"
        android:name="com.qubacy.geoqq.ui.application.activity._common.screen.mate.chats.MateChatsFragment"
        android:label="@string/fragment_mate_chats_top_bar_title_text"
        tools:layout="@layout/fragment_mate_chats">
        <action
            android:id="@+id/action_mateChatsFragment_to_myProfileFragment"
            app:destination="@id/myProfileFragment"
            app:enterAnim="@anim/slide_in_bottom"
            app:exitAnim="@anim/slide_out_bottom"
            app:popEnterAnim="@anim/slide_in_top"
            app:popExitAnim="@anim/slide_out_top" />
        <action
            android:id="@+id/action_mateChatsFragment_to_mateChatFragment"
            app:destination="@id/mateChatFragment"
            app:enterAnim="@anim/slide_in_right_zoom_in"
            app:exitAnim="@anim/slide_out_left_zoom_in"
            app:popEnterAnim="@anim/slide_in_left_zoom_out"
            app:popExitAnim="@anim/slide_out_right_zoom_out" />
        <action
            android:id="@+id/action_mateChatsFragment_to_loginFragment"
            app:destination="@id/loginFragment"
            app:enterAnim="@anim/slide_in_left"
            app:exitAnim="@anim/slide_out_right"
            app:launchSingleTop="true"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/myProfileFragment"
        android:name="com.qubacy.geoqq.ui.application.activity._common.screen.myprofile.MyProfileFragment"
        android:label="@string/fragment_my_profile_top_bar_title_text"
        tools:layout="@layout/fragment_my_profile">
        <action
            android:id="@+id/action_myProfileFragment_to_loginFragment"
            app:destination="@id/loginFragment"
            app:enterAnim="@anim/slide_in_left"
            app:exitAnim="@anim/slide_out_right"
            app:launchSingleTop="true"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/mateChatFragment"
        android:name="com.qubacy.geoqq.ui.application.activity._common.screen.mate.chat.MateChatFragment"
        android:label="MateChatFragment"
        tools:layout="@layout/fragment_mate_chat">
        <argument
            android:name="chat"
            app:argType="com.qubacy.geoqq.ui.application.activity._common.screen.mate._common.presentation.MateChatPresentation" />
        <action
            android:id="@+id/action_mateChatFragment_to_loginFragment"
            app:destination="@id/loginFragment"
            app:enterAnim="@anim/slide_in_left"
            app:exitAnim="@anim/slide_out_right"
            app:launchSingleTop="true"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/mateRequestsFragment"
        android:name="com.qubacy.geoqq.ui.application.activity._common.screen.mate.requests.MateRequestsFragment"
        android:label="@string/fragment_mate_requests_top_bar_content_wrapper_title_text"
        tools:layout="@layout/fragment_mate_requests">
        <action
            android:id="@+id/action_mateRequestsFragment_to_myProfileFragment"
            app:destination="@id/myProfileFragment"
            app:enterAnim="@anim/slide_in_bottom"
            app:exitAnim="@anim/slide_out_bottom"
            app:popEnterAnim="@anim/slide_in_top"
            app:popExitAnim="@anim/slide_out_top" />
        <action
            android:id="@+id/action_mateRequestsFragment_to_loginFragment"
            app:destination="@id/loginFragment"
            app:enterAnim="@anim/slide_in_left"
            app:exitAnim="@anim/slide_out_right"
            app:launchSingleTop="true"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/geoSettingsFragment"
        android:name="com.qubacy.geoqq.ui.application.activity._common.screen.geo.settings.GeoSettingsFragment"
        android:label="@string/fragment_geo_settings_top_bar_title_text"
        tools:layout="@layout/fragment_geo_settings" >
        <action
            android:id="@+id/action_geoSettingsFragment_to_myProfileFragment"
            app:destination="@id/myProfileFragment"
            app:enterAnim="@anim/slide_in_bottom"
            app:exitAnim="@anim/slide_out_bottom"
            app:popEnterAnim="@anim/slide_in_top"
            app:popExitAnim="@anim/slide_out_top"/>
        <action
            android:id="@+id/action_geoSettingsFragment_to_geoChatFragment"
            app:destination="@id/geoChatFragment"
            app:enterAnim="@anim/slide_in_right_zoom_in"
            app:exitAnim="@anim/slide_out_left_zoom_in"
            app:popEnterAnim="@anim/slide_in_left_zoom_out"
            app:popExitAnim="@anim/slide_out_right_zoom_out" />
        <action
            android:id="@+id/action_geoSettingsFragment_to_loginFragment"
            app:destination="@id/loginFragment"
            app:enterAnim="@anim/slide_in_left"
            app:exitAnim="@anim/slide_out_right"
            app:launchSingleTop="true"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/geoChatFragment"
        android:name="com.qubacy.geoqq.ui.application.activity._common.screen.geo.chat.GeoChatFragment"
        android:label="@string/fragment_geo_chat_top_bar_title_text"
        tools:layout="@layout/fragment_geo_chat" >
        <argument
            android:name="radius"
            app:argType="integer"
            android:defaultValue="0" />
        <argument
            android:name="latitude"
            app:argType="float"
            android:defaultValue="0" />
        <argument
            android:name="longitude"
            app:argType="float"
            android:defaultValue="0" />
        <action
            android:id="@+id/action_geoChatFragment_to_loginFragment"
            app:destination="@id/loginFragment"
            app:enterAnim="@anim/slide_in_left"
            app:exitAnim="@anim/slide_out_right"
            app:launchSingleTop="true"
            app:popUpToInclusive="true" />
    </fragment>

</navigation>