<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/main_top_bar_option_my_profile"
        android:title="@string/component_main_top_bar_option_my_profile_title"
        android:icon="@drawable/ic_person"
        app:iconTint="?attr/colorOnSurfaceVariant"
        app:showAsAction="ifRoom"/>

</menu>
