<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/mate_requests_top_bar_option_hint"
        android:title="@string/component_mate_requests_top_bar_option_hint_title"
        android:icon="@drawable/ic_info"
        app:iconTint="?attr/colorOnSurfaceVariant"
        app:showAsAction="ifRoom"
        android:orderInCategory="0"/>

</menu>