<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.textview.MaterialTextView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/component_hint_text"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingHorizontal="@dimen/small_gap_between_components"
    android:paddingVertical="@dimen/smaller_gap_between_components"
    android:background="?attr/colorSurface"
    android:textAppearance="?attr/textAppearanceBodyLarge"
    tools:text="Test hint text"
    android:visibility="gone"/>
